--- a/Wikipedia edits.html
+++ b/Wikipedia edits.html
@@ -20,8 +20,8 @@
 	<h3>* * *</h3>
 	</div>
 	
-	<a class="active" href="2730-portfolio.html">About</a>
-	<a href="">Short imagined monologue</a>
+	<a href="2730-portfolio.html">About</a>
+    <a class="active" href="Monologue.html">Short imagined monologue</a>
     <a href="">Wikipedia edits</a>
 	<a href="">Review of a digital tool</a>
 	<a href="">Adventure story in Twine</a>
@@ -33,9 +33,9 @@
 <div class="content">
 
 	<p>
-	This is Waliya Ahmed's online portfolio for the class "Digital Writing" at Northeastern (Spring 2023).
+	This is an online portfolio of my homework for the class "Digital Writing" at Northeastern, Spring 2023.
 	</p>
-    <img src="Images/Colors.png" width="650px" height="100px"/>
+    <img src="Images/Colors.png"/>
 
 
 </div>
