Changes to font and added content

--- a/About.html
+++ b/About.html
@@ -32,11 +32,14 @@
 
 <div class="content">
 
+    <h2>
+    Hello everyone! My name is Waliya Ahmed and I am a fourth-year majoring in Finance and minoring in English at Northeastern University.</h2>
+    
+    
 	<p>
 	This is Waliya Ahmed's online portfolio for the class "Digital Writing" at Northeastern (Spring 2023).
 	</p>
-    <img src="Images/Colors.png" width="650px" height="100px"/>
-
+   
 
 </div>
 
