--- a/About.html
+++ b/About.html
@@ -14,19 +14,19 @@
 <div class="sidebar">
 
 	<div id="colophon">
-	<h3>* * *</h3>
-	<h2>digital writing portfolio</h2>
+    <h3>.................................................</h3>
+	<h2>Writing Portfolio</h2>
 	<h1>Waliya Ahmed</h1>
-	<h3>* * *</h3>
+	<h3>.................................................</h3>
 	</div>
 	
-	<a class="active" href="2730-portfolio.html">About</a>
-	<a href="">Short imagined monologue</a>
-    <a href="">Wikipedia edits</a>
-	<a href="">Review of a digital tool</a>
-	<a href="">Adventure story in Twine</a>
-    <a href="">Digital writing remix</a>
-	
+    
+    <a href="About.html">About</a>
+    <a href="Short imagined monologue.html">Short imagined monologue</a>
+    <a href="Review of a digital tool.html">Review of a digital tool</a>  
+    <a href="Wikipedia edits.html">Wikipedia edits</a>  
+    <a href="Digital writing remix.html">Digital writing remix</a>
+    <a href="Research Paper.html">Research Paper</a>
 
 </div>
 
