--- a/Review of a digital tool.html
+++ b/Review of a digital tool.html
@@ -14,28 +14,28 @@
 <div class="sidebar">
 
 	<div id="colophon">
-	<h3>* * *</h3>
+	<h3>* * * * *</h3>
 	<h2>digital writing portfolio</h2>
 	<h1>Waliya Ahmed</h1>
-	<h3>* * *</h3>
+	<h3>* * * * *</h3>
 	</div>
 	
-	<a href="2730-portfolio.html">About</a>
-    <a class="active" href="Monologue.html">Short imagined monologue</a>
-    <a href="">Wikipedia edits</a>
-	<a href="">Review of a digital tool</a>
-	<a href="">Adventure story in Twine</a>
+    <a href="2730-portfolio.html">About</a>
+    <a href=""></a>Short imagined monologue</a>
     <a href="">Digital writing remix</a>
-	
-
+    <a href="">Wikipedia edits</a>    
+    <a class="active" href="Monologue.html">Review of a digital tool</a>
+	<a href="">Adventure story in Twine</a>
+    
 </div>
 
 <div class="content">
 
 	<p>
 	This is an online portfolio of my homework for the class "Digital Writing" at Northeastern, Spring 2023.
+        
 	</p>
-    <img src="Images/Colors.png"/>
+  
 
 
 </div>
