--- a/About.html
+++ b/About.html
@@ -20,8 +20,7 @@
 	<h3>.................................................</h3>
 	</div>
 	
-    
-    <a href="About.html">About</a>
+    <a class="active" href="About.html">About</a>
     <a href="Short imagined monologue.html">Short imagined monologue</a>
     <a href="Review of a digital tool.html">Review of a digital tool</a>  
     <a href="Wikipedia edits.html">Wikipedia edits</a>  
