--- a/About.html
+++ b/About.html
@@ -36,7 +36,7 @@
     
     
 	<p>
-	This is Waliya Ahmed's online portfolio for the class "Digital Writing" at Northeastern (Spring 2023).
+	This is my online portfolio with some of my work from the Digital Writing class I took in Spring 2023 and the Advanced Writing in the Disciplines class I took in Spring 2022. 
 	</p>
    
 
