--- a/About.html
+++ b/About.html
@@ -38,6 +38,10 @@
 	<p>
 	This is my online portfolio with some of my work from the Digital Writing class I took in Spring 2023 and the Advanced Writing in the Disciplines class I took in Spring 2022. 
 	</p>
+    
+    <p>
+    Welcome to my writing portfolio!
+    </p>
    
 
 </div>
