--- a/Short imagined monologue.html
+++ b/Short imagined monologue.html
@@ -14,20 +14,21 @@
 <div class="sidebar">
 
 	<div id="colophon">
-	<h3>* * *</h3>
-	<h2>digital writing portfolio</h2>
+    <h3>.................................................</h3>
+	<h2>Writing Portfolio</h2>
 	<h1>Waliya Ahmed</h1>
-	<h3>* * *</h3>
+	<h3>.................................................</h3>
 	</div>
 	
-	<a href="2730-portfolio.html">About</a>
-    <a class="active" href="Monologue.html">Short imagined monologue</a>
-    <a href="">Digital writing remix</a>
-    <a href="">Wikipedia edits</a>
-	<a href="">Review of a digital tool</a>
-	<a href="">Adventure story in Twine</a>
+	<a href="About.html">About</a>
+    <a class="active" href="Short imagined monologue.html">Short imagined monologue</a>
+    <a href="Review of a digital tool.html">Review of a digital tool</a>
+    <a href="Wikipedia edits.html">Wikipedia edits</a>
+    <a href="Digital writing remix.html">Digital writing remix</a>
+    <a href="Research Paper.html">Research Paper</a>
+    
+    
 
-	
 
 </div>
 
