--- a/About.html
+++ b/About.html
@@ -17,6 +17,7 @@
     <h3>.................................................</h3>
 	<h2>Writing Portfolio</h2>
 	<h1>Waliya Ahmed</h1>
+    <h2>Spring 2023</h2>
 	<h3>.................................................</h3>
 	</div>
 	
@@ -31,7 +32,7 @@
 <div class="content">
 
     <h2>
-    Hello everyone! My name is Waliya Ahmed and I am a fourth-year majoring in Finance and minoring in English at Northeastern University.</h2>
+    Hello everyone! My name is Waliya Ahmed and I am a fourth-year Business Administration major concentrating in Finance and minoring in English at Northeastern University.</h2>
     
     
 	<p>
